--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-Flask==1.0
-dkimpy==0.8.1
-email-reply-parser==0.5.12
-flanker==0.4.38
-imaplib2==2.45.0
-numpy==1.22.0
-psutil==5.6.6
-pyjwt==2.4.0
-requests==2.20.0
-scikit-learn==0.19.1
-scipy==1.1.0
+Flask>=2.3,<3.0
+dkimpy>=1.1,<2.0
+email-reply-parser>=0.5.12
+flanker>=0.9,<1.0
+imaplib2>=3.6
+numpy>=1.24,<2.0
+psutil>=5.9,<6.0
+pyjwt>=2.4,<3.0
+requests>=2.31,<3.0
+scikit-learn>=1.3,<2.0
+scipy>=1.11,<2.0
 validate-email==1.3
+joblib>=1.3
